@@ -8,7 +8,6 @@ export(cell_assign_Gibbs)
 export(clone_id)
 export(colMatch)
 export(donor_id)
-export(donor_id_VB)
 export(donor_read_simulator)
 export(get_snp_matrices)
 export(heat_matrix)
@@ -25,6 +24,8 @@ export(sample_seq_depth)
 export(sample_tree_SNV)
 export(sim_read_count)
 export(vc_heatmap)
+export(vireo)
+export(vireo_flock)
 import(ggplot2)
 import(matrixStats)
 import(pheatmap)
